<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_page"
            android:icon="@drawable/ic_main"
            android:title="@string/title_main_page_menu_item" />

        <item
            android:id="@+id/accounts"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/title_accounts_menu_item" />

        <item
            android:id="@+id/categories"
            android:icon="@drawable/ic_dns_black_24dp"
            android:title="@string/title_categories_menu_item" />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_settings_menu_item" />
    </group>
</menu>