<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/addTransactionContainerPadding"
    tools:context=".transaction.AddTransactionFragment">

    <TextView
        android:id="@+id/transaction_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="@dimen/addTransactionTextSize"
        android:textColor="@color/colorTitleText"
        android:text="@string/add_transaction_date_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/transaction_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="@dimen/addTransactionTextSize" />

        <Button
            android:id="@+id/transaction_date_selector"
            android:layout_width="@dimen/addTransactionDateSelectorWidth"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_calendar"/>

    </LinearLayout>

    <TextView
        android:id="@+id/transaction_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="@dimen/addTransactionTextSize"
        android:textColor="@color/colorTitleText"
        android:text="@string/add_transaction_type" />

    <Switch
        android:id="@+id/adding_transaction_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchPadding="@dimen/addTransactionTypeSwitchPadding"
        android:track="@drawable/transaction_type_switch"
        android:showText="true"
        android:textOff="@string/add_transaction_type_input"
        android:textOn="@string/add_transaction_type_output" />

    <TextView
        android:id="@+id/category_spinner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="@dimen/addTransactionTextSize"
        android:text="@string/add_transaction_category_title" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <TextView
        android:id="@+id/transaction_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="@dimen/addTransactionTextSize"
        android:textColor="@color/colorTitleText"
        android:text="@string/add_transaction_account_title" />

    <Spinner
        android:id="@+id/transaction_account_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:id="@+id/transaction_amount_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="@dimen/addTransactionTextSize"
        android:text="@string/add_transaction_amount_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/transaction_amount"
        android:layout_width="@dimen/addTransactionSumWidth"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/transaction_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" />

    </LinearLayout>

    <Button
        android:id="@+id/add_transaction_ok"
        android:layout_width="@dimen/addTransactionOkButtonWidth"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_transaction_button_ok_text"
        android:enabled="false" />

</LinearLayout>