<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/aboutDialogPadding">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="@dimen/iconSize"
        android:layout_height="@dimen/iconSize"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_icon_description"
        android:src="@drawable/ic_attach_money_black_24dp" />

    <TextView
        android:id="@+id/version"
        android:text="@string/version"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/aboutTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/author"
        android:text="@string/author"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/aboutTextSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>