<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/addTransactionContainerPadding"
    tools:context=".transaction.ui.AddTransactionActivity">

    <TextView
        android:id="@+id/transaction_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/add_transaction_date_title"
        android:textColor="@color/colorTitleText"
        android:textSize="@dimen/addTransactionTextSize"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/transaction_date_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/addTransactionTextSize"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/transaction_type_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/add_transaction_type"
        android:textColor="@color/colorTitleText"
        android:textSize="@dimen/addTransactionTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_date_title" />

    <Spinner
        android:id="@+id/transaction_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_type_title" />

    <TextView
        android:id="@+id/category_spinner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/add_transaction_category_title"
        android:textSize="@dimen/addTransactionTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_type_spinner" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_spinner_title" />

    <TextView
        android:id="@+id/transaction_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/add_transaction_account_title"
        android:textColor="@color/colorTitleText"
        android:textSize="@dimen/addTransactionTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_spinner" />

    <Spinner
        android:id="@+id/transaction_account_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_account_title" />

    <TextView
        android:id="@+id/transaction_amount_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/add_transaction_amount_title"
        android:textSize="@dimen/addTransactionTextSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_periodicity" />

    <EditText
        android:id="@+id/transaction_amount"
        android:layout_width="@dimen/addTransactionSumWidth"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="start"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_amount_title" />

    <TextView
        android:id="@+id/transaction_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/transaction_amount"
        app:layout_constraintBottom_toBottomOf="@id/transaction_amount"/>

    <Button
        android:id="@+id/add_transaction_ok"
        android:layout_width="@dimen/addTransactionOkButtonWidth"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:enabled="false"
        android:text="@string/add_transaction_button_ok_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_amount"/>

    <Spinner
        android:id="@+id/spinner_periodicity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_periodicity" />

    <TextView
        android:id="@+id/title_periodicity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_periodicity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_account_spinner" />

</android.support.constraint.ConstraintLayout>
</ScrollView>